--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -16,9 +16,11 @@
 									</encapsulation>
 									<ipv4>
 										<address>
-											<?if {/device = /service-information/service-options/ip-settings/ip/network/hosts/node}?>
-												<ip>{/service-information/service-options/ip-settings/ip/network/hosts/address}</ip>
-												<mask>{/service-information/service-options/ip-settings/ip/network/hosts/subnet-mask}</mask>
+											<?foreach {/service-information/service-options/ip-settings/ip/network/hosts}?>
+												<?if {/device = /service-information/service-options/ip-settings/ip/network/hosts/node}?>
+													<ip>{/service-information/service-options/ip-settings/ip/network/hosts/address}</ip>
+													<mask>{/service-information/service-options/ip-settings/ip/network/hosts/subnet-mask}</mask>
+												<?end?>
 											<?end?>
 										</address>
 									</ipv4>
