--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -18,8 +18,8 @@
 										<address>
 											<?foreach {/service-information/service-options/ip-settings/ip/network}?>
 												<?if {/device = /hosts}?>
-													<ip>{/service-information/service-options/ip-settings/ip/network/hosts/address}</ip>
-													<mask>{/service-information/service-options/ip-settings/ip/network/hosts/subnet-mask}</mask>
+													<ip>{/address}</ip>
+													<mask>{/subnet-mask}</mask>
 												<?end?>
 											<?end?>
 										</address>
