--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -16,7 +16,7 @@
 									</encapsulation>
 									<ipv4>
 										<?foreach {/service-information/service-options/ip-settings/ip/network}?>
-											<?foreach {/hosts}?>
+											<?foreach {hosts}?>
 												<?if {/device = node}?>
 													<address>
 														<ip>{address}</ip>
