--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -68,14 +68,14 @@
 											<bgp-no-instance>
 												<id>{local-asn}</id>
 												<vrf>
-													<name>{/service-information/network-options/vpnv4/vrf}</name>
+													<name>SERVICE-A</name>
 													<address-family>
 														<ipv4>
 															<unicast/>
 														</ipv4>
 													</address-family>
 													<neighbor>
-														<id>{/service-information/service-options/ip-settings/routing/bgp/peering/remote-address}</id>
+														<id>{remote-address}</id>
 														<remote-as>{remote-asn}</remote-as>
 														<update-source>
 															<GigabitEthernet-subinterface>
@@ -157,12 +157,12 @@
 												<ipv4>
 													<af>unicast</af>
 													<vrf>
-														<name>{/service-information/network-options/vpnv4/vrf}</name>
+														<name>SERVICE-A</name>
 														<redistribute>
 															<connected/>
 														</redistribute>
 														<neighbor>
-															<id>{/service-information/service-options/ip-settings/routing/bgp/peering/remote-address}</id>
+															<id>{remote-address}</id>
 															<remote-as>{remote-asn}</remote-as>
 															<activate/>
 															<update-source>
