--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -63,43 +63,45 @@
 						<router xmlns="http://tail-f.com/ned/cisco-ios-xr">
 							<?if {/service-information/service-options/ip-settings/routing/protocol = 'bgp'}?>
 								<?foreach {/service-information/service-options/ip-settings/routing/bgp/peering}?>
-									<?if {/device = node}?>
-										<bgp>
-											<bgp-no-instance>
-												<id>{local-asn}</id>
-												<vrf>
-													<name>SERVICE-A</name>
-													<address-family>
-														<ipv4>
-															<unicast/>
-														</ipv4>
-													</address-family>
-													<neighbor>
-														<id>{remote-address}</id>
-														<remote-as>{remote-asn}</remote-as>
-														<update-source>
-															<GigabitEthernet-subinterface>
-																<GigabitEthernet>{update-source}</GigabitEthernet>
-															</GigabitEthernet-subinterface>
-														</update-source>
+									<?foreach {network}?>
+										<?if {/device = node}?>
+											<bgp>
+												<bgp-no-instance>
+													<id>{local-asn}</id>
+													<vrf>
+														<name>SERVICE-A</name>
 														<address-family>
 															<ipv4>
-																<unicast>
-																	<route-policy>
-																		<direction>in</direction>
-																		<name>{route-policy-in}</name>
-																	</route-policy>
-																	<route-policy>
-																		<direction>out</direction>
-																		<name>{route-policy-out}</name>
-																	</route-policy>
-																</unicast>
+																<unicast/>
 															</ipv4>
 														</address-family>
-													</neighbor>
-												</vrf>
-											</bgp-no-instance>
-										</bgp>
+														<neighbor>
+															<id>{remote-address}</id>
+															<remote-as>{remote-asn}</remote-as>
+															<update-source>
+																<GigabitEthernet-subinterface>
+																	<GigabitEthernet>{update-source}</GigabitEthernet>
+																</GigabitEthernet-subinterface>
+															</update-source>
+															<address-family>
+																<ipv4>
+																	<unicast>
+																		<route-policy>
+																			<direction>in</direction>
+																			<name>{route-policy-in}</name>
+																		</route-policy>
+																		<route-policy>
+																			<direction>out</direction>
+																			<name>{route-policy-out}</name>
+																		</route-policy>
+																	</unicast>
+																</ipv4>
+															</address-family>
+														</neighbor>
+													</vrf>
+												</bgp-no-instance>
+											</bgp>
+										<?end?>
 									<?end?>
 								<?end?>
 							<?end?>
