--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -118,6 +118,8 @@
 									<name>{/service-information/network-options/vpnv4/vrf}</name>
 									<rd>100:100</rd>
 									<address-family>
+										<ipv4>
+										</ipv4>
 									</address-family>
 								</definition>
 							</vrf>
