--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -49,7 +49,7 @@
 										<ipv4>
 											<?foreach {/service-information/service-options/ip-settings/ip/network}?>
 												<?foreach {/service-information/service-options/ip-settings/ip/network/hosts/node}?>
-													<?if {/device = node}?>
+													<?if {/device = 'XRv1'}?>
 														<address>
 															<ip>{address}</ip>
 															<mask>{subnet-mask}</mask>
@@ -139,7 +139,7 @@
 								<?end?>
 								<?foreach {/service-information/service-options/ip-settings/ip/network}?>
 									<?foreach {/service-information/service-options/ip-settings/ip/network/hosts/node}?>
-										<?if {/device = node}?>
+										<?if {/device = 'CSR1'}?>
 											<ip>
 												<address>
 													<primary>
